--- a/first-test.mdx
+++ b/first-test.mdx
@@ -1,7 +1,9 @@
 ---
 title: 'Another Test Post'
-date: '2023-04-28'
-tags: ['next.js','nextjs','new']
+description: 'Another Test description'
+pubDate: 'Jan 08, 2025'
+readingTime: '4'
+heroImage: '/blog-placeholder-about.jpg'
 ---
 
 We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
