--- a/complete-extensions-list-you-need-as-a-developer-and-designer.mdx
+++ b/complete-extensions-list-you-need-as-a-developer-and-designer.mdx
@@ -8,31 +8,38 @@ heroImage: "/thumbnail.jpg"
 
 # Extensions for VS Code
 
-Here is the list of top vs code extension that increase my productivity!
+import HighLightBox from '@/components/highlight-box.astro'
 
+<HighLightBox>
+  Here is the list of top vs code extension that increase my productivity!
+</HighLightBox>
 
 ## Image Preview
+
 Shows image preview in the gutter and on hover
 
 !["image preview extension"](./images/Image-preview.png)
 
 ## Indent Rainbow
+
 This extension colorizes the indentation in front of your text, alternating four different colors on each step. Some may find it helpful in writing code for Python, Nim, Yaml, and probably even filetypes that are not indentation dependent.
 
 !["indent rainbow extension"](./images/indent-rainbow.png)
 
 ## LeetCode Extensions
-Using this extension you can solve LeetCode problems in VS Code. And it also let you see the which company have asked it google, facebook or any other company with out buying premium.
 
+Using this extension you can solve LeetCode problems in VS Code. And it also let you see the which company have asked it google, facebook or any other company with out buying premium.
 
 !["LeetCode Extensions"](./images/Leetcode.png)
 
 ## Mongodb for VS Code
+
 MongoDB for VS Code makes it easy to work with your data in MongoDB directly from your VS Code environment. MongoDB for VS Code is the perfect companion for MongoDB Atlas, but you can also use it with your self-managed MongoDB instances.
 
 !["mongodb for vs code"](./images/mongodb-for-vs-code.png)
 
 ## Path Intellisense
+
 Visual Studio Code plugin that autocompletes filenames.
 
 !["path intellisense extension"](./images/path-intellisense.png)
@@ -40,15 +47,17 @@ Visual Studio Code plugin that autocompletes filenames.
 # Extensions for Chrome
 
 ## Fake Filler
+
 A form filler that fills all inputs on a page with fake/dummy data.
 Fake Filler is THE form filler to fill all input fields on a page with randomly generated fake data. This productivity boosting extension is a must for developers and testers who work with forms as it eliminates the need for manually entering values in fields.
 
 !["fake filler"](./images/fake-filler.png)
 
 ## Temp Mail
+
 Temporary disposable email address. Protect your email from spam, bots and phishing with TempMail.
 Temp Mail provides temporary, secure, anonymous, free, disposable email address.
-Forget about spam, advertising mailings, hacking and attacking robots. Keep your real mailbox clean and secure. 
+Forget about spam, advertising mailings, hacking and attacking robots. Keep your real mailbox clean and secure.
 
 !["temp mail"](./images/temp-mail-diaposable-temporary-email.png)
 
