--- a/complete-extensions-list-you-need-as-a-developer-and-designer.mdx
+++ b/complete-extensions-list-you-need-as-a-developer-and-designer.mdx
@@ -18,31 +18,31 @@ import HighLightBox from '@/components/highlight-box.astro'
 
 Shows image preview in the gutter and on hover
 
-!["image preview extension"](./images/Image-preview.png)
+!["image preview extension"](./public/images/Image-preview.png)
 
 ## Indent Rainbow
 
 This extension colorizes the indentation in front of your text, alternating four different colors on each step. Some may find it helpful in writing code for Python, Nim, Yaml, and probably even filetypes that are not indentation dependent.
 
-!["indent rainbow extension"](./images/indent-rainbow.png)
+!["indent rainbow extension"](./public/images/indent-rainbow.png)
 
 ## LeetCode Extensions
 
 Using this extension you can solve LeetCode problems in VS Code. And it also let you see the which company have asked it google, facebook or any other company with out buying premium.
 
-!["LeetCode Extensions"](./images/Leetcode.png)
+!["LeetCode Extensions"](./public/images/Leetcode.png)
 
 ## Mongodb for VS Code
 
 MongoDB for VS Code makes it easy to work with your data in MongoDB directly from your VS Code environment. MongoDB for VS Code is the perfect companion for MongoDB Atlas, but you can also use it with your self-managed MongoDB instances.
 
-!["mongodb for vs code"](./images/mongodb-for-vs-code.png)
+!["mongodb for vs code"](./public/images/mongodb-for-vs-code.png)
 
 ## Path Intellisense
 
 Visual Studio Code plugin that autocompletes filenames.
 
-!["path intellisense extension"](./images/path-intellisense.png)
+!["path intellisense extension"](./public/images/path-intellisense.png)
 
 # Extensions for Chrome
 
@@ -51,7 +51,7 @@ Visual Studio Code plugin that autocompletes filenames.
 A form filler that fills all inputs on a page with fake/dummy data.
 Fake Filler is THE form filler to fill all input fields on a page with randomly generated fake data. This productivity boosting extension is a must for developers and testers who work with forms as it eliminates the need for manually entering values in fields.
 
-!["fake filler"](./images/fake-filler.png)
+!["fake filler"](./public/images/fake-filler.png)
 
 ## Temp Mail
 
@@ -59,7 +59,7 @@ Temporary disposable email address. Protect your email from spam, bots and phish
 Temp Mail provides temporary, secure, anonymous, free, disposable email address.
 Forget about spam, advertising mailings, hacking and attacking robots. Keep your real mailbox clean and secure.
 
-!["temp mail"](./images/temp-mail-diaposable-temporary-email.png)
+!["temp mail"](./public/images/temp-mail-diaposable-temporary-email.png)
 
 # Extensions for figma
 
@@ -73,7 +73,7 @@ A plugin for sorting/reordering layers.
 - Reverse order
 - Randomize order
 
-!["sorter plugin"](./images/sorter-plugin.png)
+!["sorter plugin"](./public/images/sorter-plugin.png)
 
 ## Styler Plugin
 
@@ -83,4 +83,4 @@ A plugin for sorting/reordering layers.
 - Detach styles: Detach styles from selected layers.
 - Apply styles: Apply styles by matching the style and layer names.
 
-!["styler plugin"](./images/styler-plugin.png)
+!["styler plugin"](./public/images/styler-plugin.png)
