--- a/src/content/blog/complete-extensions-list-you-need-as-a-developer-and-designer.mdx
+++ b/src/content/blog/complete-extensions-list-you-need-as-a-developer-and-designer.mdx
@@ -8,11 +8,9 @@ heroImage: "/thumbnail.jpg"
 
 # Extensions for VS Code
 
-import HighLightBox from '@/components/highlight-box.astro'
+import HighLightBox from './src/components/highlight-box.astro'
 
-<HighLightBox>
-  Here is the list of top vs code extension that increase my productivity!
-</HighLightBox>
+<HighLightBox>Here is the list of top vs code extension that increase my productivity!</HighLightBox>
 
 ## Image Preview
 
